develop ::: se realiza la lógica de backend para iniciar partida contra la PC
